add register & login with db

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.15.10",
     "@mui/material-nextjs": "^5.15.9",
     "@prisma/client": "^5.10.1",
+    "argon2": "^0.40.1",
     "formik": "^2.4.5",
     "iron-session": "^8.0.1",
     "next": "14.1.0",
